<resources>
    <string name="app_name">Warung Stock</string>
    <string name="item_stock_pricing_note">Item Stock Pricing Note</string>
    <string name="stock_pricing_note">Stock Pricing Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warung_note_management_system">Warung Note Management System</string>
    <string name="build_by_qushai">build by Qushai</string>
    <string name="warung_note_logo">Warung Note Logo</string>
    <string name="detail_item_pricing">Detail Item Pricing</string>
    <string name="small_package_pricing">Small Package Pricing</string>
    <string name="detail_item_pricing_setting_menu">Detail Item Pricing Setting Menu</string>
    <string name="item_name">Item Name</string>
    <string name="search">Search...</string>
    <string name="search_bar">Search Bar</string>
    <string name="add_new_stock_pricing_note">Add New Stock Pricing Note</string>
    <string name="form_add_stock_pricing">Form Add Stock Pricing</string>
    <string name="input_label">Input Label</string>
    <string name="small_package_name">Small Package Name</string>
    <string name="small_package_price">Small Package Price</string>
    <string name="add">Add +</string>
    <string name="caution">Caution</string>
    <string name="stock_pricing_delete_caution_description">Be careful to using delete, this will be deleted forever if you just wanna delete some small package click cancel and find edit button.</string>
    <string name="are_you_sure_want_to_delete_this">Are you sure want to delete this ?</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>