<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stockPricingNoteForm.FormAddStockPricingFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_theme_tertiaryContainer_mediumContrast"
        android:elevation="4dp"
        app:titleTextColor="@color/md_theme_onTertiaryContainer_mediumContrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_chevron_left"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/form_add_stock_pricing"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:id="@+id/linearLayout_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/small_package_pricing"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_item_name"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_item_name"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_item_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerView_detail_small_packages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:itemCount="2"
        tools:listitem="@layout/item_small_package_for_form" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="10dp"
        android:textColor="@color/md_theme_onTertiary_mediumContrast"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        app:backgroundTint="@color/md_theme_tertiaryContainer_mediumContrast"
        app:layout_constraintEnd_toEndOf="@+id/recylerView_detail_small_packages"
        app:layout_constraintStart_toStartOf="@+id/recylerView_detail_small_packages"
        app:layout_constraintTop_toBottomOf="@+id/recylerView_detail_small_packages" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/md_theme_tertiaryContainer_mediumContrast"
        app:tint="@color/md_theme_onTertiaryContainer_mediumContrast"
        android:layout_marginBottom="70dp"
        android:src="@drawable/ic_save"
        android:contentDescription="@string/detail_item_pricing_setting_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>